changed buttons to material design standard, fixed color visibility, and added an effects mixin to factor up

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
 $type1-color: #4680FF;
 $type2-color: #28A738;
 $type3-color: #FF281D;
-$type4-color: #E8D01D;
+$type4-color: darken(#E8D01D, 2%);
 $type5-color: #FF6917;
 
 //border radius variables
@@ -13,6 +13,25 @@ $type2-br: 8px;
 $type3-br: 12px;
 $type4-br: 18px;
 $type5-br: 24px;
+
+//mixins
+@mixin btn-effects {
+  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0.2s;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  &:active {
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
+    transition-delay: 0s;
+  }
+  &:focus {
+    outline: 0;
+  }
+}
+
+
+* { 
+  box-sizing: border-box; 
+}
 
 section {
   text-align: center;
@@ -27,160 +46,96 @@ button{
   border: solid 1px currentColor;
   padding: 1em;
   margin: 1.5em 1em;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .type1{  
     .pri{
       // primary attribtes
-      color: $type1-color;
-      background-color:lighten($type1-color, 20%);
+      color: lighten($type1-color, 50%);
+      background-color: $type1-color;
       border: solid 1px transparent;
-      cursor: pointer;
-      &:hover {
-       // primary hover attributes
-      border: solid 1px darken($type1-color, 1%);
-      background-color: darken($type1-color, 1%);
-      color: lighten($type1-color, 20%);
-      box-shadow: 0px 1px 4px lighten($type1-color, 40%);
-      }
+      @include btn-effects;
+
     }
     .sec{
       // secondary attributes
       color: $type1-color;
       background-color: white;
-      cursor: pointer;
-      &:hover {
-        //secondary hover attributes
-      border: solid 1px darken($type1-color,1%);
-      background-color: darken($type1-color,1%);
-      color: lighten($type1-color,20%);
-      }
+      @include btn-effects;
     }  
 }
 
 .type2{
     .pri{
      // primary attribtes
-      color: $type2-color;
-      background-color:lighten($type2-color, 20%);
+      color: lighten($type2-color, 50%);
+      background-color:$type2-color;
       border: solid 1px transparent;
-      cursor: pointer;
       border-radius: $type2-br;
-      &:hover {
-       // primary hover attributes
-      border: solid 1px darken($type2-color, 1%);
-      background-color: darken($type2-color, 1%);
-      color: lighten($type2-color, 20%);
-      box-shadow: 0px 1px 4px lighten($type2-color, 40%);
-    }
+      @include btn-effects;
     }
     .sec{
       // secondary attributes
       color: $type2-color;
       background-color: white;
-      cursor: pointer;
       border-radius: $type2-br;
-      &:hover {
-        //secondary hover attributes
-      border: solid 1px darken($type2-color,1%);
-      background-color: darken($type2-color,1%);
-      color: lighten($type2-color,20%);
-      }
+      @include btn-effects;
     }  
 }
 
-.type3{  
+.type3{
     .pri{
-      // primary attribtes
-      color: $type3-color;
-      background-color:lighten($type3-color, 20%);
+     // primary attribtes
+      color: lighten($type3-color, 50%);
+      background-color:$type3-color;
       border: solid 1px transparent;
-      cursor: pointer;
       border-radius: $type3-br;
-      &:hover {
-       // primary hover attributes
-      border: solid 1px darken($type3-color, 1%);
-      background-color: darken($type3-color, 1%);
-      color: lighten($type3-color, 20%);
-      box-shadow: 0px 1px 4px lighten($type3-color, 40%);
-    }
+      @include btn-effects;
     }
     .sec{
       // secondary attributes
       color: $type3-color;
       background-color: white;
-      cursor: pointer;
       border-radius: $type3-br;
-      &:hover {
-        //secondary hover attributes
-      border: solid 1px darken($type3-color,1%);
-      background-color: darken($type3-color,1%);
-      color: lighten($type3-color,20%);
-      }
+      @include btn-effects;
     }  
 }
 
 .type4{
-     .pri{
-      // primary attribtes
-      color: darken($type4-color, 5%);
-      background-color:lighten($type4-color, 20%);
+    .pri{
+     // primary attribtes
+      color: lighten($type4-color, 50%);
+      background-color:$type4-color;
       border: solid 1px transparent;
-      cursor: pointer;
       border-radius: $type4-br;
-      &:hover {
-       // primary hover attributes
-      border: solid 1px darken($type4-color, 1%);
-      background-color: darken($type4-color, 1%);
-      color: lighten($type4-color, 30%);
-      box-shadow: 0px 1px 4px lighten($type4-color, 40%);
+      @include btn-effects;
     }
-     }
     .sec{
       // secondary attributes
-      color: darken($type4-color, 5%);
+      color: $type4-color;
       background-color: white;
-      cursor: pointer;
       border-radius: $type4-br;
-      &:hover {
-        //secondary hover attributes
-      border: solid 1px darken($type4-color,1%);
-      background-color: darken($type4-color,1%);
-      color: lighten($type4-color,30%);
-      }
+      @include btn-effects;
     }  
 }
 
 .type5{
     .pri{
-      // primary attribtes
-      color: $type5-color;
-      background-color:lighten($type5-color, 20%);
+     // primary attribtes
+      color: lighten($type5-color, 50%);
+      background-color:$type5-color;
       border: solid 1px transparent;
-      cursor: pointer;
       border-radius: $type5-br;
-      &:hover {
-       // primary hover attributes
-      border: solid 1px darken($type5-color, 1%);
-      background-color: darken($type5-color, 1%);
-      color: lighten($type5-color, 20%);
-      box-shadow: 0px 1px 4px lighten($type5-color, 40%);
-    }
+      @include btn-effects;
     }
     .sec{
       // secondary attributes
       color: $type5-color;
       background-color: white;
-      cursor: pointer;
       border-radius: $type5-br;
-      &:hover {
-        //secondary hover attributes
-      border: solid 1px darken($type5-color,1%);
-      background-color: darken($type5-color,1%);
-      color: lighten($type5-color,20%);
-      }
-    }
+      @include btn-effects;
+    }  
 }
 // Em conversion function
 @function em($value, $context: $body) {
@@ -197,6 +152,7 @@ $h5: 20px;
 $h6: 16px;
 
 body {
+  background-color: #f9f9f9;
   max-width: 700px;
   margin: 3em auto;
   padding: 0 1em;
